# LocalCloud

./: .gitignore  README.txt  pyproject.toml  requirements.txt
client/: __init__.py  api_client.py  cli.py  encryptor.py  keystore.py  sharing.py
rust/keycore/: Cargo.toml  pyproject.toml
rust/keycore/src/: identity.rs  lib.rs  secure_memory.rs  signing.rs  wrapping.rs
server/: __init__.py  admin.py  app.py  auth.py  config.py  database.py  policy.py  quota.py  storage.py
shared/: __init__.py  crypto.py  exceptions.py  io.py  models.py
tests/: conftest.py  test_admin.py  test_auth_token.py  test_database.py  test_encryptor.py  test_models.py  test_storage_share.py
