[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localcloud"
version = "0.1.0"
description = "Personal E2EE cloud storage server + client"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "quart>=0.19,<1.0",
    "hypercorn>=0.17,<1.0",
    "PyNaCl>=1.5,<2.0",
    "argon2-cffi>=23.1,<24.0",
    "cbor2>=5.6,<6.0",
    "httpx>=0.27,<1.0",
    "click>=8.1,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.5",
    "pylint>=3.0",
    "pyright>=1.1.350",
    "pip-audit>=2.7",
    "hypothesis>=6.100",
]

[project.scripts]
localcloud = "client.cli:main"
localcloud-server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["client*", "server*", "shared*"]
exclude = ["tests*", "rust*"]

# ──────────────────────────── Tool config ────────────────────────────

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["client", "server", "shared"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Conservative ruleset focused on correctness, not style noise. Black/isort
# handle formatting; pylint handles deeper analysis.
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear (common pitfalls)
    "UP",  # pyupgrade
    "SIM", # simplify
    "RET", # return statements
    "S",   # security (bandit-like)
]
ignore = [
    "E501",  # line length — Black handles
    "S101",  # assert used — fine in tests / preconditions
    "S104",  # hardcoded-bind — server validates bind_host itself
    "SIM108", # ternary suggestions are often less clear
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "B"]

[tool.pylint.main]
ignore-paths = ["rust/", "build/", "dist/"]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-instance-attributes",
    "line-too-long",  # Black handles
    "duplicate-code",  # too noisy across small modules
    "fixme",  # explicit policy: no TODOs in delivered code, but we audit those separately
    "import-outside-toplevel",
    "broad-exception-caught",
]

[tool.pyright]
include = ["client", "server", "shared"]
exclude = ["rust/**", "**/__pycache__", "**/.venv", "**/target"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "warning"
reportOptionalMemberAccess = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
